Footer: Fix text alignment

--- a/src/components/MainFooter/MainFooter.css
+++ b/src/components/MainFooter/MainFooter.css
@@ -1,5 +1,5 @@
 .main-footer {
   @apply mx-auto;
   @apply pb-6;
-  @apply @text-center;
+  @apply text-center;
 }
